dockerfile-best-practices/check-certificate-validation-git-env-var/test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bad-test-01
spec:
  steps:
    - name: kyverno
      try:
      - script:
          content: |
            set -e
            kyverno apply ../check-certificate-validation-git-env-var.yaml --json './bad-test-01/bad-payload-01.json'
          check: 
            "(contains($stdout, 'pass: 0, fail: 1, warn: 0, error: 0, skip: 0'))": true
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bad-test-02
spec:
  steps:
    - name: kyverno
      try:
      - script:
          content: |
            set -e
            kyverno apply ../check-certificate-validation-git-env-var.yaml --json './bad-test-02/bad-payload-02.json'
          check: 
            "(contains($stdout, 'pass: 0, fail: 1, warn: 0, error: 0, skip: 0'))": true
